--- a/up_melnilov_522/App.xaml
+++ b/up_melnilov_522/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="up_melnilov_522.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:up_melnilov_522"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Windows/LoginWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Control">
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+        </Style>
     </Application.Resources>
 </Application>
